Force support-for() to return boolean false when version is null.

--- a/sass/_support-for.scss
+++ b/sass/_support-for.scss
@@ -54,5 +54,5 @@ $support-for-current-browser-version: (
     $min-version: map-get($support-for-current-browser-version, $browser) + $min-version + 1;
   }
 
-  @return ($min-version and ($version >= $min-version));
+  @return if(($min-version and ($version >= $min-version)), true, false);
 }
