--- a/sass/_support-for.scss
+++ b/sass/_support-for.scss
@@ -9,14 +9,14 @@ $support-for: (
   '*':     -4,
 ) !default;
 
-// Set the current version number for all browsers. As of: 2015-11-17
+// Set the current version number for all browsers. As of: 2016-03-19
 $support-for-current-browser-version: (
-  chrome:  46,
-  edge:    25,
-  firefox: 42,
-  ie:      11,
-  opera:   33,
-  safari:  9,
+  chrome:  46, // https://en.wikipedia.org/wiki/Google_Chrome_release_history
+  edge:    25, // https://en.wikipedia.org/wiki/Microsoft_Edge
+  firefox: 45, // https://en.wikipedia.org/wiki/Firefox_release_history
+  ie:      11, // https://en.wikipedia.org/wiki/Internet_Explorer_versions
+  opera:   36, // https://en.wikipedia.org/wiki/Opera_(web_browser)
+  safari:  9,  // https://en.wikipedia.org/wiki/Safari_version_history
 ) !default;
 
 
